last minute dark mode fix

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -7,5 +7,7 @@
     display: flex;
     padding: 0px;
     background-color: #121212;
+    height: 100vw;
+    align-items: flex-start;
 
 }
