--- a/app/assets/stylesheets/navbar/nav.css
+++ b/app/assets/stylesheets/navbar/nav.css
@@ -228,6 +228,7 @@ body{
 }
 
 .dark-searchBar{
+    color: white;
     
     height: 35px;
     width: 40vw;
